--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -1,3 +1,58 @@
 <html>
-	Just a demo
+	<head>
+		<title>Who would I tag?</title>
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+	</head>
+
+	<body>
+
+		<div id="fb-root"></div>
+		<script>
+  			window.fbAsyncInit = function() {
+    			// init the FB JS SDK
+			    FB.init({
+			      appId      : 'Y1478363702389039',                        // App ID from the app dashboard
+			      status     : true,                                 // Check Facebook Login status
+			      xfbml      : true                                  // Look for social plugins on the page
+			    });
+
+			    // Additional initialization code such as adding Event Listeners goes here
+			};
+
+		  // Load the SDK asynchronously
+		  (function(){
+		     // If we've already installed the SDK, we're done
+		     if (document.getElementById('facebook-jssdk')) {return;}
+
+		     // Get the first script element, which we'll use to find the parent node
+		     var firstScriptElement = document.getElementsByTagName('script')[0];
+
+		     // Create a new script element and set its id
+		     var facebookJS = document.createElement('script'); 
+		     facebookJS.id = 'facebook-jssdk';
+
+		     // Set the new script's source to the source of the Facebook JS SDK
+		     facebookJS.src = '//connect.facebook.net/en_US/all.js';
+
+		     // Insert the Facebook JS SDK into the DOM
+		     firstScriptElement.parentNode.insertBefore(facebookJS, firstScriptElement);
+		   }());
+		</script>
+
+		<script type="text/javascript">
+			FB.login(function(response) {
+			   if (response.authResponse) {
+			     console.log('Welcome!  Fetching your information.... ');
+			     FB.api('/me', function(response) {
+			       console.log('Good to see you, ' + response.name + '.');
+			     });
+			   } else {
+			     console.log('User cancelled login or did not fully authorize.');
+			   }
+			});
+
+		</script>
+
+	</body>
 </html>
