--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title>Who would I tag?</title>
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -10,34 +10,32 @@
 		<div id="fb-root"></div>
 		<script>
   			window.fbAsyncInit = function() {
-    			// init the FB JS SDK
 			    FB.init({
-			      appId      : 'Y1478363702389039',                        // App ID from the app dashboard
-			      status     : true,                                 // Check Facebook Login status
-			      xfbml      : true                                  // Look for social plugins on the page
+			        appId      : '1478363702389039',
+			        status     : true,
+			        cookie     : true,
+			        xfbml      : true  
 			    });
 
-			    // Additional initialization code such as adding Event Listeners goes here
+			    $(document).trigger('fbload');  //  <---- THIS RIGHT HERE TRIGGERS A CUSTOM EVENT CALLED 'fbload'
 			};
 
-		  // Load the SDK asynchronously
-		  (function(){
-		     // If we've already installed the SDK, we're done
-		     if (document.getElementById('facebook-jssdk')) {return;}
+			//MEANWHILE IN $(document).ready()
+			$(document).on(
+			    'fbload',  //  <---- HERE'S OUR CUSTOM EVENT BEING LISTENED FOR
+			    function(){
+			        //some code that requires the FB object
+			        //such as...
+			        FB.getLoginStatus(function(res){
+			            if( res.status == "connected" ){
+			                FB.api('/me', function(fbUser) {
+			                    console.log("Open the pod bay doors, " + fbUser.name + ".");
+			                });
+			            }
+			        });
 
-		     // Get the first script element, which we'll use to find the parent node
-		     var firstScriptElement = document.getElementsByTagName('script')[0];
-
-		     // Create a new script element and set its id
-		     var facebookJS = document.createElement('script'); 
-		     facebookJS.id = 'facebook-jssdk';
-
-		     // Set the new script's source to the source of the Facebook JS SDK
-		     facebookJS.src = '//connect.facebook.net/en_US/all.js';
-
-		     // Insert the Facebook JS SDK into the DOM
-		     firstScriptElement.parentNode.insertBefore(facebookJS, firstScriptElement);
-		   }());
+			    }
+			);
 		</script>
 
 		<script type="text/javascript">
