--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -25,6 +25,7 @@
 			$(document).on(
 			    'fbload',  //  <---- HERE'S OUR CUSTOM EVENT BEING LISTENED FOR
 			    function(){
+			    	console.log("Here is a console log test");
 			        //some code that requires the FB object
 			        //such as...
 			        FB.getLoginStatus(function(res){
