Updated login stuff

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -12,7 +12,8 @@
 			<script>
 			  window.fbAsyncInit = function() {
 			    FB.init({
-			      appId      : '1478363702389039', // App ID
+			      appId      : '1478363702389039', // App ID,
+			      channelURL : '',
 			      status     : true, // check login status
 			      cookie     : true, // enable cookies to allow the server to access the session
 			      xfbml      : true  // parse XFBML
