--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -11,22 +11,39 @@
 		<div id="fb-root"></div>
 			<script>
 			  window.fbAsyncInit = function() {
-			    FB.init({
-			      appId      : '1478363702389039', // App ID,
-			      channelURL : '',
-			      status     : true, // check login status
-			      cookie     : true, // enable cookies to allow the server to access the session
-			      xfbml      : true  // parse XFBML
-			    });
-			    };
-			 
-			  (function(d){
-			     var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-			     if (d.getElementById(id)) {return;}
-			     js = d.createElement('script'); js.id = id; js.async = true;
-			     js.src = "//connect.facebook.net/en_US/all.js";
-			     ref.parentNode.insertBefore(js, ref);
-			   }(document));
+				   FB.init({
+				     appId      : '1478363702389039', // App ID
+				     channelURL : '', // Channel File, not required so leave empty
+				     status     : true, // check login status
+				     cookie     : true, // enable cookies to allow the server to access the session
+				     oauth      : true, // enable OAuth 2.0
+				     xfbml      : false  // parse XFBML
+				   });
+				};
+				// logs the user in the application and facebook
+				function login(){
+				FB.getLoginStatus(function(r){
+				     if(r.status === 'connected'){
+				            window.location.href = 'fbconnect.php';
+				     }else{
+				        FB.login(function(response) {
+				                if(response.authResponse) {
+				              //if (response.perms)
+				                    window.location.href = 'fbconnect.php';
+				            } else {
+				              // user is not logged in
+				            }
+				     },{scope:'email'}); // which data to access from user profile
+				 }
+				});
+				}
+				// Load the SDK Asynchronously
+				(function() {
+				   var e = document.createElement('script'); e.async = true;
+				   e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';                
+				   document.getElementById('fb-root').appendChild(e);
+				}());
+
 			 
 			</script>
 
