--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -8,44 +8,61 @@
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 
+		<!--
 		<div id="fb-root"></div>
-			<script>
-			  window.fbAsyncInit = function() {
-				   FB.init({
-				     appId      : '1478363702389039', // App ID
-				     channelURL : '', // Channel File, not required so leave empty
-				     status     : true, // check login status
-				     cookie     : true, // enable cookies to allow the server to access the session
-				     oauth      : true, // enable OAuth 2.0
-				     xfbml      : false  // parse XFBML
-				   });
-				};
-				// logs the user in the application and facebook
-				function login(){
-				FB.getLoginStatus(function(r){
-				     if(r.status === 'connected'){
-				            window.location.href = 'fbconnect.php';
-				     }else{
-				        FB.login(function(response) {
-				                if(response.authResponse) {
-				              //if (response.perms)
-				                    window.location.href = 'fbconnect.php';
-				            } else {
-				              // user is not logged in
-				            }
-				     },{scope:'email'}); // which data to access from user profile
-				 }
-				});
-				}
-				// Load the SDK Asynchronously
-				(function() {
-				   var e = document.createElement('script'); e.async = true;
-				   e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';                
-				   document.getElementById('fb-root').appendChild(e);
-				}());
+		<script>
+		  window.fbAsyncInit = function() {
+		    // init the FB JS SDK
+		    FB.init({
+		      appId      : 'YOUR_APP_ID',                        // App ID from the app dashboard
+		      channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel file for x-domain comms
+		      status     : true,                                 // Check Facebook Login status
+		      xfbml      : true                                  // Look for social plugins on the page
+		    });
 
-			 
-			</script>
+		    // Additional initialization code such as adding Event Listeners goes here
+		  };
 
+		  // Load the SDK asynchronously
+		  (function(d, s, id){
+		     var js, fjs = d.getElementsByTagName(s)[0];
+		     if (d.getElementById(id)) {return;}
+		     js = d.createElement(s); js.id = id;
+		     js.src = "//connect.facebook.net/en_US/all.js";
+		     fjs.parentNode.insertBefore(js, fjs);
+		   }(document, 'script', 'facebook-jssdk'));
+		</script>
+		-->
+
+		<div id="fb-root"></div>
+                <script>
+                          window.fbAsyncInit = function() {
+                            FB.init({
+                                appId      : '1478363702389039',
+                                status     : true,
+                                cookie     : true,
+                                xfbml      : true  
+                            });
+
+                            $(document).trigger('fbload');  //  <---- THIS RIGHT HERE TRIGGERS A CUSTOM EVENT CALLED 'fbload'
+                        };
+
+                        //MEANWHILE IN $(document).ready()
+                        $(document).on(
+                            'fbload',  //  <---- HERE'S OUR CUSTOM EVENT BEING LISTENED FOR
+                            function(){
+                                //some code that requires the FB object
+                                //such as...
+                                FB.getLoginStatus(function(res){
+                                    if( res.status == "connected" ){
+                                        FB.api('/me', function(fbUser) {
+                                            console.log("Open the pod bay doors, " + fbUser.name + ".");
+                                        });
+                                    }
+                                });
+
+                            }
+                        );
+                </script>
 	</body>
 </html>
