--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+</head>
 <body>
 <div id="fb-root"></div>
 <script>
