Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -104,7 +104,7 @@
 			}).read().done(function(results){
 				queryResults = JSON.stringify(results);
 			});
-			console.log(query_results);
+			console.log(queryResults);
 		}
 	</script>
 
