Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -68,6 +68,7 @@
 	    FB.api('/me', function(response) {
 	      console.log('Good to see you, ' + response.name + '.');
 	      userName = response.name;
+	      console.log(userName);
 	    });
 
 	    //getFriends();
