Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -92,9 +92,16 @@
 		    });
 		}
 	</script>
-	
+
 	<div class = "row">
-		<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+		<div class = "col-md-4">
+		</div>
+		<div class = "col-md-4">
+			<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+		</div>
+		<div class = "col-md-4">
+		</div>
+		
 	</div>
 
 
