--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -93,6 +93,14 @@
 		}
 	</script>
 
+	<nav class="navbar navbar-default" role="navigation">
+  		<!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <a class="navbar-brand" href="#">Who Would I Tag?</a>
+	  </div>
+
+	</nav>
+
 	<div class = "row">
 		<div class = "col-md-4">
 		</div>
