Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -113,6 +113,18 @@
 	</div>
 
 	<div class = "row" id = "part2">
+		<div class = "col-md-4">
+			<div class = "well">
+			</div>
+		</div>
+		<div class = "col-md-4">
+			<div class = "well">
+			</div>
+		</div>
+		<div class = "col-md-4">
+			<div class = "well">
+			</div>
+		</div>
 	</div>
 
 
@@ -147,6 +159,8 @@
 		function transition1() {
 			$('#part1').hide('slow');
 			console.log("Part 1 hidden");
+			$('#part2').show('slow');
+			console.log("Part 2 opened");
 		}
 	</script>
 
