Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -157,8 +157,8 @@
 		}
 
 		function transition1() {
-			$('#part1').hide('slow');
-			console.log("Part 1 hidden");
+			//$('#part1').hide('slow');
+			//console.log("Part 1 hidden");
 			$('#part2').show('slow');
 			console.log("Part 2 opened");
 		}
