Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -104,13 +104,15 @@
 	<div class = "row" id = "part1">
 		<div class = "col-md-4">
 		</div>
-		<div class = "col-md-4">
+		<div class = "col-md-4 text-center">
 			<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
 		</div>
 		<div class = "col-md-4">
 		</div>
 		
 	</div>
+
+	<br><br><br><br><br>
 
 	<div class = "row" id = "part2">
 		<div class = "col-md-4">
