--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -117,14 +117,17 @@
 	<div class = "row" id = "part2">
 		<div class = "col-md-4">
 			<div class = "well">
+				<h1> Group Select </h1>
 			</div>
 		</div>
 		<div class = "col-md-4">
 			<div class = "well">
+				<h1> Group Stats </h1>
 			</div>
 		</div>
 		<div class = "col-md-4">
 			<div class = "well">
+				<h1> Tag Someone </h1>
 			</div>
 		</div>
 	</div>
