Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -120,7 +120,7 @@
 				<h1> Group Select </h1>
 				<p>
 				<form>
-					<input type = "text" id = "groupName" placeholder = "Enter new group name"></input> 
+					<input type = "text" class = "form-control" id = "groupName" placeholder = "Enter new group name"></input> 
 				</form>
 				<p>
 				<button type="button" class="btn btn-primary" id = "createGroupButton" onclick = "createGroup()">Create group</button>
