--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -4,6 +4,15 @@
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 		<script src="https://itag.azure-mobile.net/client/MobileServices.Web-1.0.0.min.js"></script>
+
+		<script>
+			function createGroup(){
+				console.log($("groupName").val());
+				var item = { groupName: $("groupName").val(), users: {userName}};
+				client.getTable('groups').insert(item);
+				console.log("Group added to the database")
+			}
+		</script>
 	</head>
 
 <body>
@@ -179,12 +188,7 @@
 			
 		}
 
-		function createGroup(){
-			console.log($("groupName").val());
-			var item = { groupName: $("groupName").val(), users: {userName}};
-			client.getTable('groups').insert(item);
-			console.log("Group added to the database")
-		}
+		
 	</script>
 
 
