Loads of correction

--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -157,9 +157,9 @@
 			var queryResults;
 			var usersTable = client.getTable('users');
 			var query = usersTable.where({
-				name: userName
+				name: "Visrut Sudhakar"
 			});
-			console.log(query);
+			console.log(query.read());
 
 			if(queryResults == undefined){
 				console.log("Creating record of user");
