--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -158,8 +158,10 @@
 			var usersTable = client.getTable('users');
 			var query = usersTable.where({
 				name: "Visrut Sudhakar"
-			});
-			console.log(query.read());
+			}).read().done(function (results) {
+           		alert(JSON.stringify(results));
+           	});
+			console.log(;
 
 			if(queryResults == undefined){
 				console.log("Creating record of user");
