--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -161,7 +161,7 @@
 			}).read().done(function (results) {
            		alert(JSON.stringify(results));
            	});
-			console.log(;
+			console.log(query);
 
 			if(queryResults == undefined){
 				console.log("Creating record of user");
