--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -160,7 +160,7 @@
 				name: "Visrut Sudhakar"
 			}).read().done(function (results) {
            		alert(JSON.stringify(results));
-
+           		queryResults = JSON.stringify(results);
            	});
 			console.log(query);
 
