--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -163,6 +163,7 @@
            		queryResults = JSON.stringify(results);
            	});
 			console.log(query);
+			console.log(queryResults);
 
 			if(queryResults == null){
 				console.log("Creating record of user");
