--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -165,7 +165,7 @@
 			console.log(query);
 			console.log(queryResults);
 
-			if(queryResults == null){
+			if(queryResults === null){
 				console.log("Creating record of user");
 				var item = { name: userName };
 				console.log(userName);
