--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -159,7 +159,7 @@
 			var query = usersTable.where({
 				name: "Visrut Sudhakar"
 			}).read().done(function (results) {
-           		alert(JSON.stringify(results));
+           		//alert(JSON.stringify(results));
            		queryResults = JSON.stringify(results);
            	});
 			console.log(query);
