--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -166,6 +166,8 @@
 			}).read().done(function (results) {
            		//alert(JSON.stringify(results));
            		queryResults = JSON.stringify(results);
+           		var test = JSON.stringify(results);
+           		alert(test);
            	});
 			console.log(query);
 			console.log(queryResults);
