--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -172,7 +172,7 @@
 			console.log(query);
 			console.log(queryResults);
 
-			if(queryResults === null){
+			if(test.length === 2){
 				console.log("Creating record of user");
 				var item = { name: userName };
 				console.log(userName);
