--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -168,6 +168,7 @@
            		queryResults = JSON.stringify(results);
            		var test = JSON.stringify(results);
            		alert(test);
+           		queryResults = String(queryResults);
            	});
 			console.log(query);
 			console.log(queryResults);
