--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -165,10 +165,7 @@
 				name: userName
 			}).read().done(function (results) {
            		//alert(JSON.stringify(results));
-           		//queryResults = JSON.stringify(results);
-           		//var test = JSON.stringify(results);
-           		//alert(test);
-           		//queryResults = String(queryResults);
+           		console.log(JSON.stringify(results));
            	});
 			console.log(String(query));
 			console.log(queryResults);
