--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -159,16 +159,15 @@
 			    "https://itag.azure-mobile.net/",
 			    "LpnkHFTfwySUYBqpggzlXPIGwMZSpH48"
 			);
-			var queryResults;
+			var queryResults = "";
 			var usersTable = client.getTable('users');
 			var query = usersTable.where({
 				name: userName
 			}).read().done(function (results) {
            		//alert(JSON.stringify(results));
            		console.log(JSON.stringify(results));
+           		queryResults = queryResults+JSON.stringify(results);
            	});
-			console.log(String(query));
-			console.log(queryResults);
 
 			if(queryResults.length === 2){
 				console.log("Creating record of user");
