--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -169,6 +169,8 @@
            		queryResults = queryResults+JSON.stringify(results);
            	});
 
+           	console.log(queryResults.length);
+
 			if(queryResults.length === 2){
 				console.log("Creating record of user");
 				var item = { name: userName };
