--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -178,9 +178,9 @@
            		console.log(test);
            	});
 
-           	console.log(queryResults.length);
+           	console.log(test.length);
 
-			if(queryResults.length === 0){
+			if(test.length === 0){
 				console.log("Creating record of user");
 				var item = { name: userName };
 				console.log(userName);
