--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -175,12 +175,12 @@
            		console.log(JSON.stringify(results));
            		queryResults = queryResults+JSON.stringify(results);
            		test = JSON.stringify(results);
-           		console.log(test);
+           		console.log(test.length);
            	});
 
-           	console.log(test.length());
+           	console.log(test.length);
 
-			if(test.length() < 5){
+			if(test.length < 5){
 				console.log("Creating record of user");
 				var item = { name: userName };
 				console.log(userName);
