--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -21,7 +21,7 @@
 				var groupNameVar = $("#groupName").val();
 
 				var groupRef = new Firebase('https://whowoulditag.firebaseio.com/'+userName+'/'+groupNameVar);
-				groupRef.set({status:yes});
+				groupRef.set({});
 			}
 		</script>
 	</head>
