--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -255,7 +255,7 @@
            				var pos = readInQuery.search("{");
            				var pos2 = readInQuery.search("}");
            				sliced = readInQuery.slice(pos+1, pos2);
-           				sliced = sliced.slice(9, readInQuery.length-2);
+           				sliced = sliced.slice(9, (readInQuery.length)-3);
            				readInQuery = readInQuery.slice(pos2+1);
            				console.log(sliced);
            				console.log(readInQuery);
