--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -260,6 +260,7 @@
            				console.log(readInQuery);
 
            				//Display on app
+           				var groupNameVar = $("#groupName").val();
 						$('#groupSelectWell').append("<p><div id = " + groupNameVar + "> <b>" + groupNameVar + "</b></div>")
 
 
