--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -260,7 +260,7 @@
            				console.log(readInQuery);
 
            				//Display on app
-           				var groupNameVar = $("#groupName").val();
+           				var groupNameVar = sliced;
 						$('#groupSelectWell').append("<p><div id = " + groupNameVar + "> <b>" + groupNameVar + "</b></div>")
 
 
