--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -261,7 +261,7 @@
 
            				//Display on app
            				var groupNameVar = sliced;
-						$('#groupSelectWell').append("<p><div id = " + groupNameVar + "> <b>" + groupNameVar + "</b></div>")
+						$('#groupSelectWell').append("<p><a onclick = "displayStats(groupNameVar)" id = " + groupNameVar + "> <b>" + groupNameVar + "</b></a>")
 
 
            			}
