--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -261,7 +261,7 @@
 
            				//Display on app
            				var groupNameVar = sliced;
-						$('#groupSelectWell').append("<p><a class = "groupLink" id = " + groupNameVar + "> <b>" + groupNameVar + "</b></a>")
+						$('#groupSelectWell').append("<p><a class = 'groupLink' id = " + groupNameVar + "> <b>" + groupNameVar + "</b></a>")
 
 
            			}
@@ -284,7 +284,7 @@
 		//Display states for group
 		$('.groupLink').click(function(){
 			//Get id and do something
-			
+
 		});
 	</script>
 
