--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -284,7 +284,8 @@
 		//Display states for group
 		$('.groupLink').click(function(){
 			//Get id and do something
-
+			var groupId = $(this).attr('id');
+			console.log(groupId);
 		});
 	</script>
 
