--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -286,6 +286,7 @@
 			//Get id and do something
 			var groupId = $(this).attr('id');
 			console.log(groupId);
+			alert("This is an alert!");
 		});
 	</script>
 
