--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -261,7 +261,7 @@
 
            				//Display on app
            				var groupNameVar = sliced;
-						$('#groupSelectWell').append("<p><div class = 'button btn-primary groupLink' id = " + groupNameVar + "> <b>" + groupNameVar + "</b></div>")
+						$('#groupSelectWell').append("<p><button class = 'button btn-primary groupLink' id = " + groupNameVar + "> <b>" + groupNameVar + "</b></button>")
 
 
            			}
