--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -266,7 +266,7 @@
 						var newElement = document.createElement(groupNameVar);
 						newElement.type = "button";
 						newElement.addEventListener('click', function(){
-
+							alert("I speak for the trees!");
 						});
 
 						$('#groupSelectWell').body.appendChild(newElement);
