--- a/webinterface/index.html
+++ b/webinterface/index.html
@@ -269,7 +269,7 @@
 							alert("I speak for the trees!");
 						});
 
-						$('#groupSelectWell').appendChild(newElement);
+						$('#groupSelectWell').append(newElement);
 
 
            			}
